--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="#hero" class="active">Beranda</a></li>
-          <li><a href="#about">Tentang</a></li>
+          <li><a href="#about">About Us</a></li>
           <li><a href="#speaker">Speaker</a></li>
           <li><a href="#agenda">Agenda</a></li>
           <li><a href="#sponsor">Sponsor</a></li>
@@ -65,7 +65,7 @@
       <div class="hero-content">
           <img src="assets/img/acd.png" class="logo" title="AWS Community Day Indonesia">
           <h4>Uniting Developers and Community, Elevating Innovation with AWS</h4><br><br>
-          <h5>23 November 2024, TBD Jakarta</h5><br>
+          <h5>Jakarta, 23 November 2024</h5><br>
           <a href="#about" class="btn-get-started">Mulai</a>
       </div>
     </section>
@@ -77,7 +77,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <p>Selamat Datang!</p>
+        <p>Welcome!</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -86,9 +86,9 @@
           <div class="content col-xl-5 d-flex flex-column" data-aos="fade-up" data-aos-delay="100">
             <br><br>
             <p>
-              Kegiatan yang bertujuan untuk mengeksplorasi tren, inovasi, dan praktik terbaik dalam dunia cloud computing yang ditawarkan oleh Amazon Web Services (AWS). <br><br>
-              Bergabunglah bersama kami untuk mengikuti sesi yang penuh wawasan, diskusi menarik, lokakarya praktis, dan peluang berjejaring, yang semuanya dirancang untuk memperluas pengetahuan dan kemahiran Anda dalam memanfaatkan solusi AWS.
-            </p>
+              <br>At AWS Community Day Indonesia 2024, delve into the latest trends, innovations, and best practices in cloud computing with Amazon Web Services (AWS). <br><br>
+              Join us for insightful sessions, engaging discussions, hands-on workshops, and valuable networking opportunities—all designed to enhance your expertise and mastery of AWS solutions.
+              </p>
           </div>
 
           <div class="col-xl-7" data-aos="fade-up" data-aos-delay="200">
@@ -96,26 +96,26 @@
 
               <div class="col-md-6 icon-box position-relative">
                 <i class="bi bi-briefcase"></i>
-                <h4><a href="" class="stretched-link">Jaringan Profesional</a></h4>
-                <p>Peluang berjejaring dengan pakar industri.</p>
+                <h4><a href="" class="stretched-link">Professional Networking</a></h4>
+                <p>Connect with industry experts and expand your professional network.</p>
               </div><!-- Icon-Box -->
 
               <div class="col-md-6 icon-box position-relative">
                 <i class="bi bi-gem"></i>
-                <h4><a href="" class="stretched-link">Pengetahuan Terkini</a></h4>
-                <p>Memperoleh wawasan teknologi terbaru.</p>
+                <h4><a href="" class="stretched-link">Up-to-Date Knowledge</a></h4>
+                <p>Stay ahead with insights into the latest AWS technologies.</p>
               </div><!-- Icon-Box -->
 
               <div class="col-md-6 icon-box position-relative">
                 <i class="bi bi-broadcast"></i>
-                <h4><a href="" class="stretched-link">Pembelajaran Langsung</a></h4>
-                <p>Mengikuti sesi praktik yang interaktif.</p>
+                <h4><a href="" class="stretched-link">Hands-on Learning</a></h4>
+                <p>Engage in interactive sessions and gain practical experience.</p>
               </div><!-- Icon-Box -->
 
               <div class="col-md-6 icon-box position-relative">
                 <i class="bi bi-easel"></i>
-                <h4><a href="" class="stretched-link">Inspirasi Inovasi</a></h4>
-                <p>Mendapatkan ide-ide baru untuk inovasi.</p>
+                <h4><a href="" class="stretched-link">Innovation Inspiration</a></h4>
+                <p>Discover fresh ideas to drive innovation in your projects.</p>
               </div><!-- Icon-Box -->
 
             </div>
@@ -132,7 +132,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <p><span class="description-title">Hitung Mundur</span></p>
+        <p><span class="description-title">Count Down</span></p>
       </div><!-- End Section Title -->
 
       <!-- Countdown Timer -->
@@ -140,19 +140,19 @@
         <div id="countdown" class="countdown">
           <div class="countdown-box">
             <span id="days"></span>
-            <p>Hari</p>
+            <p>Day</p>
           </div>
           <div class="countdown-box">
             <span id="hours"></span>
-            <p>Jam</p>
+            <p>Hour</p>
           </div>
           <div class="countdown-box">
             <span id="minutes"></span>
-            <p>Menit</p>
+            <p>Minute</p>
           </div>
           <div class="countdown-box">
             <span id="seconds"></span>
-            <p>Detik</p>
+            <p>Second</p>
           </div>
         </div>
       </div><!-- End Countdown Timer -->
@@ -279,7 +279,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <p>Komunitas</p>
+        <p>Community Partner</p>
       </div><!-- End Section Title -->      
         <section>
             <!-- Silver Sponsors -->
@@ -307,7 +307,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <p><span class="description-title">Tim</span></p>
+        <p><span class="description-title">Team</span></p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -414,7 +414,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <p><span class="description-title">Pertanyaan yang Sering Diajukan</span></p>
+        <p><span class="description-title">frequently Asked Questions (FAQ)</span></p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -426,50 +426,49 @@
             <div class="faq-container">
 
               <div class="faq-item">
-                <h3>Apa itu AWS Community Day?</h3>
+                <h3>What is AWS Community Day?</h3>
                 <div class="faq-content">
-                  <p>AWS Community Day adalah acara yang diselenggarakan oleh komunitas AWS untuk komunitas. Ini adalah kesempatan bagi pengguna AWS untuk berkumpul dan belajar satu sama lain, berbagi praktik terbaik, serta mendengarkan presentasi dari para ahli di industri.</p>
+                  <p>AWS Community Day is a community-driven event, organized by the AWS community for the community. It's an opportunity for AWS users to come together, share knowledge, learn from each other, exchange best practices, and hear from industry experts through insightful presentations..</p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right"></i>
               </div><!-- End Faq item-->
 
               <div class="faq-item">
-                <h3>Siapa yang bisa berpartisipasi dalam acara ini?</h3>
+                <h3>Who Can Participate in This Event?</h3>
                 <div class="faq-content">
-                  <p>AWS Community Day terbuka untuk semua pengguna AWS yang tertarik, tanpa memandang tingkat keahlian.</p>
+                  <p>AWS Community Day is open to all AWS users, regardless of skill level, who are interested in learning and engaging with the community.</p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right"></i>
               </div><!-- End Faq item-->
 
               <div class="faq-item">
-                <h3>Apakah perlu mendaftar untuk berpartisipasi dalam acara ini?</h3>
+                <h3>Is Registration Required to Participate in This Event?</h3>
                 <div class="faq-content">
-                  <p>Ya, pendaftaran diperlukan untuk bisa berpartisipasi dalam acara ini. Silakan mendaftar melalui situs web acara.
-                  </p>
+                  <p>Yes, registration is required to participate. Please register through the event website.</p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right"></i>
               </div><!-- End Faq item-->
 
               <div class="faq-item">
-                <h3>Apakah ada biaya terkait dengan partisipasi dalam acara ini?</h3>
+                <h3>Is There a Fee for Participating in This Event?</h3>
                 <div class="faq-content">
-                  <p>Biaya pendaftaran untuk berpartisipasi di acara ini sebesar Rp50.000.</p>
+                  <p>Yes, there is a registration fee of Rp50,000 to participate in this event.</p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right"></i>
               </div><!-- End Faq item-->
 
               <div class="faq-item">
-                <h3>Di mana acara ini akan diadakan?</h3>
+                <h3>Where Will This Event Be Held?</h3>
                 <div class="faq-content">
-                  <p>Acara ini akan diadakan di TBD.</p>
+                  <p>The event location is yet to be determined (TBD) .</p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right"></i>
               </div><!-- End Faq item-->
 
               <div class="faq-item">
-                <h3>Bagaimana cara menjadi sponsor?</h3>
+                <h3>How to Become a Sponsor?</h3>
                 <div class="faq-content">
-                  <p>Kirimkan email langsung ke awsugid@gmail.com. Kami akan mengirimkan paket sponsor kami yang berisi informasi detail tentang tingkat sponsorship dan manfaatnya.</p>
+                  <p>Send an email directly to awsugid@gmail.com. We will provide you with our sponsorship package, which includes detailed information on sponsorship levels and benefits.</p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right"></i>
               </div><!-- End Faq item-->
@@ -494,7 +493,7 @@
           <a href="index.html" class="logo d-flex align-items-center">
             <span class="sitename">AWS User Group Indonesia</span>
           </a>
-          <p>AWS User Group Indonesia adalah komunitas pengguna AWS di Indonesia yang terdiri dari AWS User Group Medan, AWS User Group Jakarta, AWS User Group Malang, AWS User Group Surabaya.</p>
+          <p>AWS User Group Indonesia is a community of AWS users in Indonesia, comprising AWS User Group Medan, AWS User Group Jakarta, AWS User Group Malang, and AWS User Group Surabaya.</p>
           <div class="social-links d-flex mt-4">
             <a href="https://twitter.com/AWSUserGroupID/"><i class="bi bi-twitter-x"></i></a>
             <a href="https://web.facebook.com/groups/awsindonesia"><i class="bi bi-facebook"></i></a>
@@ -504,23 +503,23 @@
         </div>
 
         <div class="col-lg-2 col-6 footer-links">
-          <h4>Tautan Penting</h4>
+          <h4>Useful links</h4>
           <ul>
-            <li><a href="#">Beranda</a></li>
-            <li><a href="#">Bergabung dengan kami</a></li>
-            <li><a href="#coc.html">Kode Etik</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#coc.html">Code of Conduct</a></li>
           </ul>
         </div>
 
         <div class="col-lg-2 col-6 footer-links">
-          <h4>Tautan Penting</h4>
+          <h4>Useful Links</h4>
           <ul>
-            <li><a href="#">Panduan Pembicara</a></li>
+            <li><a href="#">Speaker Guidelines</a></li>
           </ul>
         </div>
 
         <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
-          <h4>Kontak Kami</h4>
+          <h4>Contact Us</h4>
           <p>AWS User Group Indonesia</p>
           <p class="mt-4"><strong>Phone:</strong> <span>+62 8525 9044 226</span></p>
           <p><strong>Email:</strong> <span>awsugid@gmail.com</span></p>
