Call For Paper : - add section - add link to sessionize

--- a/index.html
+++ b/index.html
@@ -192,6 +192,63 @@
       }, 1000);
     </script>
 
+    <!-- Call For Papers -->
+    <section id="cfp" class="cfp section">
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <p><span class="description-title">Call For Paper</span></p>
+        <div class="my-4">
+          <a class="btn btn-primary" href="https://sessionize.com/aws-comm-day-id-2024">Call for paper</a>
+        </div>
+      </div><!-- End Section Title -->
+
+      <div class="container">
+
+        <div class="row gy-5">
+          <div class="col">
+            <p>
+              Calling all experts in the field of cloud computing!
+            </p>
+            <p>
+              We are excited to announce the upcoming AWS Community Day Indonesia
+              and we are looking for dynamic and knowledgeable speakers to share their experiences, insights, and best practices with our audience.
+              This is an excellent opportunity to showcase your work and connect with fellow AWS enthusiasts from the Polish-speaking community.
+              We welcome submissions from a diverse set of speakers, including those from different backgrounds and experience levels.
+              Whether you're an AWS-certified professional, a developer, or a researcher, we want to hear from you.
+              Share your case studies, deep-dive technical sessions, or hands-on workshops with our audience and help them learn and grow.
+            </p>
+          </div>
+
+          <div class="col">
+              <strong>Topics at the AWS Community Day</strong>
+              <ul>
+                <li>Introduction to AWS Cloud Services</li>
+                <li>Building Scalable Applications on AWS</li>
+                <li>Enhancing Data Analytics with AWS</li>
+                <li>Cloud Security Best Practices</li>
+                <li>AI and Machine Learning Applications</li>
+                <li>Serverless Architecture on AWS</li>
+                <li>IoT Solutions using AWS</li>
+                <li>Cost Optimization Strategies</li>
+                <li>DevOps and Continuous Integration/Continuous Deployment (CI/CD) with AWS</li>
+                <li>Case Studies and Industry Insights</li>
+                <li>More!</li>
+              </ul>
+          </div>
+
+        </div>
+
+        <div>
+          Feel free to submit sessions in Bahasa Indonesia / English (or even both if you don't mind).
+          Don't miss out on this opportunity to share your expertise and connect with the AWS community members.
+          We can't wait to hear from you!
+
+          For any further clarification, questions or ideas don't hesitate to get in touch with us via <a href="mailto:awsugid@gmail.com">awsugid@gmail.com!</a>
+        </div>
+
+      </div>
+    </section>
+
     <!-- Speakers -->
     <section id="speaker" class="speaker section">
 
