Call For Paper : fix inconsistent button style

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       <div class="container section-title" data-aos="fade-up">
         <p><span class="description-title">Call For Paper</span></p>
         <div class="my-4">
-          <a class="btn btn-primary" href="https://sessionize.com/aws-comm-day-id-2024">Call for paper</a>
+          <a class="btn btn-outline-primary rounded-pill px-4" href="https://sessionize.com/aws-comm-day-id-2024">Call for paper</a>
         </div>
       </div><!-- End Section Title -->
 
