--- a/index.html
+++ b/index.html
@@ -196,10 +196,7 @@
     <section id="cfp" class="cfp section">
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <p><span class="description-title">Call For Paper</span></p>
-        <div class="my-4">
-          <a class="btn btn-outline-primary rounded-pill px-4" href="https://sessionize.com/aws-comm-day-id-2024">Call for paper</a>
-        </div>
+        <p><span class="description-title">Call For Papers</span></p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -207,14 +204,13 @@
         <div class="row gy-5">
           <div class="col">
             <p>
-              Calling all experts in the field of cloud computing!
+              <b>Calling all experts in the field of cloud computing!</b>
             </p>
             <p>
-              We are excited to announce the upcoming AWS Community Day Indonesia
-              and we are looking for dynamic and knowledgeable speakers to share their experiences, insights, and best practices with our audience.
-              This is an excellent opportunity to showcase your work and connect with fellow AWS enthusiasts from the Polish-speaking community.
+              We are looking for dynamic and knowledgeable speakers to share their experiences, insights, and best practices with our audience. <br>
+              
               We welcome submissions from a diverse set of speakers, including those from different backgrounds and experience levels.
-              Whether you're an AWS-certified professional, a developer, or a researcher, we want to hear from you.
+              Whether you're an AWS-certified professional, <br>a developer, or a researcher, we want to hear from you.<br>
               Share your case studies, deep-dive technical sessions, or hands-on workshops with our audience and help them learn and grow.
             </p>
           </div>
@@ -235,11 +231,15 @@
                 <li>More!</li>
               </ul>
           </div>
-
+          <center>
+            <div class="my-4">
+              <a class="btn btn-outline-primary rounded-pill px-4" href="https://sessionize.com/aws-comm-day-id-2024">Submit Now!</a>
+            </div>
+          </center>
         </div>
 
         <div>
-          Feel free to submit sessions in Bahasa Indonesia / English (or even both if you don't mind).
+          Feel free to submit sessions in <b>Bahasa Indonesia</b> / <b>English</b> (or even both if you don't mind).
           Don't miss out on this opportunity to share your expertise and connect with the AWS community members.
           We can't wait to hear from you!
 
