--- a/index.html
+++ b/index.html
@@ -207,11 +207,11 @@
               <b>Calling all experts in the field of cloud computing!</b>
             </p>
             <p>
-              We are looking for dynamic and knowledgeable speakers to share their experiences, insights, and best practices with our audience. <br>
+              We are excited to announce the upcoming AWS Community Day Indonesia and we are looking for dynamic and knowledgeable speakers to share their experiences, insights, and best practices with our audience.<br>
               
-              We welcome submissions from a diverse set of speakers, including those from different backgrounds and experience levels.
-              Whether you're an AWS-certified professional, <br>a developer, or a researcher, we want to hear from you.<br>
-              Share your case studies, deep-dive technical sessions, or hands-on workshops with our audience and help them learn and grow.
+              This is an excellent opportunity to showcase your work and connect with fellow AWS enthusiasts from the Indonesian-speaking community. We welcome submissions from a diverse set of speakers, including those from different backgrounds and experience levels.<br>
+              
+              Whether you're an AWS-certified professional, a developer, or a researcher, we want to hear from you. Share your case studies, deep-dive technical sessions, or hands-on workshops with our audience and help them learn and grow.
             </p>
           </div>
 
