--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <img src="assets/img/acd.png" class="logo" title="AWS Community Day Indonesia">
           <h4>Uniting Developers and Community, Elevating Innovation with AWS</h4><br><br>
           <h5>Jakarta, 23 November 2024</h5><br>
-          <a href="#about" class="btn-get-started">Mulai</a>
+          <a href="#about" class="btn-get-started">Start</a>
       </div>
     </section>
 
