edit cfp button

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <div class="content col-xl-5 d-flex flex-column" data-aos="fade-up" data-aos-delay="100">
             <br><br>
             <p>
-              <br>At AWS Community Day Indonesia 2024, delve into the latest trends, innovations, and best practices in cloud computing with Amazon Web Services (AWS). <br><br>
+              <br>At <b>AWS Community Day Indonesia 2024</b>, delve into the latest trends, innovations, and best practices in cloud computing with Amazon Web Services (AWS). <br><br>
               Join us for insightful sessions, engaging discussions, hands-on workshops, and valuable networking opportunities—all designed to enhance your expertise and mastery of AWS solutions.
               </p>
           </div>
@@ -241,7 +241,7 @@
           Don't miss out on this opportunity to share your expertise and connect with the AWS community members.
           We can't wait to hear from you!
     
-          For any further clarification, questions or ideas don't hesitate to get in touch with us via <a href="mailto:awsugid@gmail.com">awsugid@gmail.com!</a>
+          For any further clarification, questions or ideas don't hesitate to get in touch with us via <a href="mailto:awsugid@gmail.com">awsugid@gmail.com</a>
         </div>
     
       </div>
@@ -276,15 +276,15 @@
 
       <!-- Call for Sponsors -->
       <div class="container call-for-sponsors" data-aos="fade-up">
-        <p>Join us as a sponsor for AWS Community Day Indonesia 2024! Your support will make a huge impact and help create an unforgettable experience for all attendees.</p>
+        <p>Join us as a sponsor for <b>AWS Community Day Indonesia 2024!</b> Your support will make a huge impact and help create an unforgettable experience for all attendees. </p>
         <div class="button-wrapper">
-          <a href="https://drive.google.com/your-form-link" class="btn btn-submit" target="_blank">Support Us</a>
+          <a href="https://drive.google.com/your-form-link" class="btn btn-get-started" target="_blank">Support Us</a>
         </div>
       </div><!-- End Call for Sponsors -->
 
       <!-- Platinum Sponsors -->
       <section id="platinum-sponsors" class="sponsor-category platinum-sponsors" data-aos="fade-up">
-        <h3><center>Platinum</center></h3>
+        <h3 class="sponsor-heading platinum-heading"><center>Platinum</center></h3>
         <div class="container">
           <div class="row">
             <div class="col-lg-6 col-md-6 d-flex justify-content-center">
@@ -299,7 +299,7 @@
 
       <!-- Gold Sponsors -->
       <section id="gold-sponsors" class="sponsor-category gold-sponsors" data-aos="fade-up">
-        <h3><center>Gold</center></h3>
+        <h3 class="sponsor-heading gold-heading"><center>Gold</center></h3>
         <div class="container">
           <div class="row">
             <div class="col-lg-4 col-md-4 d-flex justify-content-center">
@@ -317,7 +317,7 @@
 
       <!-- Silver Sponsors -->
       <section id="silver-sponsors" class="sponsor-category silver-sponsors" data-aos="fade-up">
-        <h3><center>Silver</center></h3>
+        <h3 class="sponsor-heading silver-heading"><center>Silver</center></h3>
         <div class="container">
           <div class="row">
             <div class="col-lg-3 col-md-3 col-sm-6 d-flex justify-content-center">
@@ -338,7 +338,7 @@
 
       <!-- Bronze Sponsors -->
       <section id="bronze-sponsors" class="sponsor-category bronze-sponsors" data-aos="fade-up">
-        <h3><center>Bronze</center></h3>
+        <h3 class="sponsor-heading bronze-heading"><center>Bronze</center></h3>
         <div class="container">
           <div class="row">
             <div class="col-lg-2 col-md-4 col-sm-6 d-flex justify-content-center">
@@ -359,6 +359,7 @@
           </div>
         </div>
       </section><!-- End Bronze Sponsors -->
+
 
     </section><!-- End Sponsor Section -->
 
@@ -611,13 +612,13 @@
               <div class="faq-item">
                 <h3>What is AWS Community Day?</h3>
                 <div class="faq-content">
-                  <p>AWS Community Day is a community-driven event, organized by the AWS community for the community. It's an opportunity for AWS users to come together, share knowledge, learn from each other, exchange best practices, and hear from industry experts through insightful presentations..</p>
+                  <p>AWS Community Day is a community-driven event, organized by the AWS community for the community. It's an opportunity for AWS users to come together, share knowledge, learn from each other, exchange best practices, and hear from industry experts through insightful presentations.</p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right"></i>
               </div><!-- End Faq item-->
 
               <div class="faq-item">
-                <h3>Who Can Participate in This Event?</h3>
+                <h3>Who can participate in this event?</h3>
                 <div class="faq-content">
                   <p>AWS Community Day is open to all AWS users, regardless of skill level, who are interested in learning and engaging with the community.</p>
                 </div>
@@ -625,7 +626,7 @@
               </div><!-- End Faq item-->
 
               <div class="faq-item">
-                <h3>Is Registration Required to Participate in This Event?</h3>
+                <h3>Is registration required to participate in this event?</h3>
                 <div class="faq-content">
                   <p>Yes, registration is required to participate. Please register through the event website.</p>
                 </div>
@@ -633,7 +634,7 @@
               </div><!-- End Faq item-->
 
               <div class="faq-item">
-                <h3>Is There a Fee for Participating in This Event?</h3>
+                <h3>Is There a fee for participating in this event?</h3>
                 <div class="faq-content">
                   <p>Yes, there is a registration fee of Rp50,000 to participate in this event.</p>
                 </div>
@@ -641,7 +642,7 @@
               </div><!-- End Faq item-->
 
               <div class="faq-item">
-                <h3>Where Will This Event Be Held?</h3>
+                <h3>Where will this event be held?</h3>
                 <div class="faq-content">
                   <p>The event location is yet to be determined (TBD) .</p>
                 </div>
@@ -649,9 +650,9 @@
               </div><!-- End Faq item-->
 
               <div class="faq-item">
-                <h3>How to Become a Sponsor?</h3>
+                <h3>How to become a sponsor?</h3>
                 <div class="faq-content">
-                  <p>Send an email directly to awsugid@gmail.com. We will provide you with our sponsorship package, which includes detailed information on sponsorship levels and benefits.</p>
+                  <p>Send an email directly to <a href="mailto:awsugid@gmail.com">awsugid@gmail.com</a>. We will provide you with our sponsorship package, which includes detailed information on sponsorship levels and benefits.</p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right"></i>
               </div><!-- End Faq item-->
@@ -705,7 +706,7 @@
           <h4>Contact Us</h4>
           <p>AWS User Group Indonesia</p>
           <p class="mt-4"><strong>Phone:</strong> <span>+62 8525 9044 226</span></p>
-          <p><strong>Email:</strong> <span>awsugid@gmail.com</span></p>
+          <p><strong>Email:</strong> <span><a href="mailto:awsugid@gmail.com">awsugid@gmail.com</a></span></p>
         </div>
 
       </div>
