edit cfp button

--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@
     <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-5 col-md-12 footer-about">
-          <a href="index.html" class="logo d-flex align-items-center">
+          <a href="https://awscommunity.id" class="logo d-flex align-items-center">
             <span class="sitename">AWS User Group Indonesia</span>
           </a>
           <p>AWS User Group Indonesia is a community of AWS users in Indonesia, comprising AWS User Group Medan, AWS User Group Jakarta, AWS User Group Malang, and AWS User Group Surabaya.</p>
