edit cfp button

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
       <div class="container call-for-sponsors" data-aos="fade-up">
         <p>Join us as a sponsor for <b>AWS Community Day Indonesia 2024!</b> Your support will make a huge impact and help create an unforgettable experience for all attendees. </p>
         <div class="button-wrapper">
-          <a href="https://drive.google.com/your-form-link" class="btn btn-get-started" target="_blank">Support Us</a>
+          <a href="https://drive.google.com/file/d/12U2RYQm69WcbdmrnCFUEEophM3XfdmXe/view?usp=sharing" class="btn btn-get-started" target="_blank">Support Us</a>
         </div>
       </div><!-- End Call for Sponsors -->
 
@@ -571,7 +571,7 @@
           <div class="col-lg-2 col-md-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
             <div class="team-member">
               <div class="member-img">
-                <img src="" class="img-fluid" alt="">
+                <img src="assets/img/team/farhanaziz.jpeg" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
