add comm and new team

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-6 col-md-6 d-flex justify-content-center">
-              <img src="assets/img/sponsor/sponsor.png" alt="Platinum Sponsor 1" class="img-fluid platinum-img">
+              <img src="assets/img/sponsor/aws.png" alt="Platinum Sponsor 1" class="img-fluid platinum-img">
             </div>
             <div class="col-lg-6 col-md-6 d-flex justify-content-center">
               <img src="assets/img/sponsor/sponsor.png" alt="Platinum Sponsor 2" class="img-fluid platinum-img">
@@ -375,23 +375,29 @@
       <section>
         <!-- Community Partners -->
         <div class="container community-partners" data-aos="fade-up">
-          <div class="row">
-            <div class="col-lg-3 col-md-4 col-sm-6 d-flex justify-content-center">
-              <img src="assets/img/community/ibstudio.PNG" alt="Community Partner 1" class="img-fluid community-img">
+          <div class="row g-4"> <!-- Added g-4 for consistent spacing between columns -->
+            <div class="col-lg-2 col-md-4 col-sm-6 d-flex justify-content-center align-items-center">
+              <img src="assets/img/community/heroes.png" alt="AWS Heroes" class="img-fluid community-img">
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 d-flex justify-content-center">
-              <img src="assets/img/community/community.png" alt="Community Partner 2" class="img-fluid community-img">
+            <div class="col-lg-2 col-md-4 col-sm-6 d-flex justify-content-center align-items-center">
+              <img src="assets/img/community/awscb.png" alt="AWS Community Builder" class="img-fluid community-img">
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 d-flex justify-content-center">
-              <img src="assets/img/community/community.png" alt="Community Partner 3" class="img-fluid community-img">
+            <div class="col-lg-2 col-md-4 col-sm-6 d-flex justify-content-center align-items-center">
+              <img src="assets/img/community/awsug.jpg" alt="AWS User Group" class="img-fluid community-img">
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 d-flex justify-content-center">
-              <img src="assets/img/community/community.png" alt="Community Partner 4" class="img-fluid community-img">
+            <div class="col-lg-2 col-md-4 col-sm-6 d-flex justify-content-center align-items-center">
+              <img src="assets/img/community/awscc.jpeg" alt="AWS Cloud Club" class="img-fluid community-img">
+            </div>
+            <div class="col-lg-2 col-md-4 col-sm-6 d-flex justify-content-center align-items-center">
+              <img src="assets/img/community/ibstudio.PNG" alt="IB Studio" class="img-fluid community-img">
+            </div>
+            <div class="col-lg-2 col-md-4 col-sm-6 d-flex justify-content-center align-items-center">
+              <img src="assets/img/community/nenggala.png" alt="PT Nenggala Kreatif Indonesia" class="img-fluid community-img">
             </div>
           </div>
         </div><!-- End Community Partners -->
       </section>
-
+      
     </section>
 
 
@@ -582,6 +588,24 @@
               <div class="member-info">
                 <h4>M Farhan Aziz</h4>
                 <span>Data Engineer @ PT Dikstra Solusi</span>
+              </div>
+            </div>
+          </div><!-- End Team Member -->
+
+          <div class="col-lg-2 col-md-4 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
+            <div class="team-member">
+              <div class="member-img">
+                <img src="assets/img/team/bella.jpg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter-x"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Muhammad Bella BN</h4>
+                <span>AWS Community Builder</span>
               </div>
             </div>
           </div><!-- End Team Member -->
