add comm and new team

--- a/index.html
+++ b/index.html
@@ -375,29 +375,41 @@
       <section>
         <!-- Community Partners -->
         <div class="container community-partners" data-aos="fade-up">
-          <div class="row g-4"> <!-- Added g-4 for consistent spacing between columns -->
+          <div class="row g-4">
             <div class="col-lg-2 col-md-4 col-sm-6 d-flex justify-content-center align-items-center">
-              <img src="assets/img/community/heroes.png" alt="AWS Heroes" class="img-fluid community-img">
+              <a href="https://aws.amazon.com/developer/community/heroes/" target="_blank">
+                <img src="assets/img/community/heroes.png" alt="AWS Heroes" class="img-fluid community-img">
+              </a>
             </div>
             <div class="col-lg-2 col-md-4 col-sm-6 d-flex justify-content-center align-items-center">
-              <img src="assets/img/community/awscb.png" alt="AWS Community Builder" class="img-fluid community-img">
+              <a href="https://aws.amazon.com/developer/community/community-builders/" target="_blank">
+                <img src="assets/img/community/awscb.png" alt="AWS Community Builder" class="img-fluid community-img">
+              </a>
             </div>
             <div class="col-lg-2 col-md-4 col-sm-6 d-flex justify-content-center align-items-center">
-              <img src="assets/img/community/awsug.jpg" alt="AWS User Group" class="img-fluid community-img">
+              <a href="https://aws.amazon.com/developer/community/usergroups/" target="_blank">
+                <img src="assets/img/community/awsug.jpg" alt="AWS User Group" class="img-fluid community-img">
+              </a>
             </div>
             <div class="col-lg-2 col-md-4 col-sm-6 d-flex justify-content-center align-items-center">
-              <img src="assets/img/community/awscc.jpeg" alt="AWS Cloud Club" class="img-fluid community-img">
+              <a href="https://aws.amazon.com/developer/community/students/cloudclubs/" target="_blank">
+                <img src="assets/img/community/awscc.jpeg" alt="AWS Cloud Club" class="img-fluid community-img">
+              </a>
             </div>
             <div class="col-lg-2 col-md-4 col-sm-6 d-flex justify-content-center align-items-center">
-              <img src="assets/img/community/ibstudio.PNG" alt="IB Studio" class="img-fluid community-img">
+              <a href="#" target="_blank">
+                <img src="assets/img/community/ibstudio.PNG" alt="IB Studio" class="img-fluid community-img">
+              </a>
             </div>
             <div class="col-lg-2 col-md-4 col-sm-6 d-flex justify-content-center align-items-center">
-              <img src="assets/img/community/nenggala.png" alt="PT Nenggala Kreatif Indonesia" class="img-fluid community-img">
+              <a href="https://nenggalakreatif.co.id/" target="_blank">
+                <img src="assets/img/community/nenggala.png" alt="PT Nenggala Kreatif Indonesia" class="img-fluid community-img">
+              </a>
             </div>
           </div>
         </div><!-- End Community Partners -->
       </section>
-      
+            
     </section>
 
 
