--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-2 col-md-4 col-sm-6 d-flex justify-content-center">
-              <img src="assets/img/sponsor/sponsor.png" alt="Bronze Sponsor 1" class="img-fluid bronze-img">
+              <img src="assets/img/sponsor/jetbrains.png" alt="jetbrains" class="img-fluid bronze-img">
             </div>
             <div class="col-lg-2 col-md-4 col-sm-6 d-flex justify-content-center">
               <img src="assets/img/sponsor/sponsor.png" alt="Bronze Sponsor 2" class="img-fluid bronze-img">
