--- a/index.html
+++ b/index.html
@@ -346,6 +346,12 @@
             <div class="col-lg-2 col-md-4 col-sm-6 d-flex justify-content-center">
               <img src="assets/img/sponsor/sponsor.png" alt="Bronze Sponsor 3" class="img-fluid bronze-img">
             </div>
+            <div class="col-lg-2 col-md-4 col-sm-6 d-flex justify-content-center">
+              <img src="assets/img/sponsor/sponsor.png" alt="Bronze Sponsor 4" class="img-fluid bronze-img">
+            </div>
+            <div class="col-lg-2 col-md-4 col-sm-6 d-flex justify-content-center">
+              <img src="assets/img/sponsor/sponsor.png" alt="Bronze Sponsor 5" class="img-fluid bronze-img">
+            </div>
           </div>
         </div>
       </section><!-- End Bronze Sponsors -->
